Subdirectory has been fixed
tgalib --> tgasdk

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,6 @@ include_directories(tgasdk/include)
 
 add_executable(TGASdk_test ${SOURCE_EXE})
 
-add_subdirectory(tgalib)
+add_subdirectory(tgasdk)
 
 target_link_libraries(TGASdk_test TGASdk)	
